# Game-Tech-12

./: .gitignore  README.md
Assignment-2/: Document.txt  HOW_TO_BUILD  InstructionManual.txt  README.md  create
Assignment-2/Assets/: Material.002.material  blue.material  ceiling.mesh  court.material  court.material~  dameron.fontdef  flash.particle  leftwall.mesh  rightwall.mesh  stadium-mats.material  tron.material  tron.mesh  wall.material  wall.material~  xbox.mesh  xbox2.material
Assignment-2/Linux-Build-Tools/: Makefile.am  Makefile.am~  README  buildit  configure.ac  makeit  resources.cfg
Assignment-2/Source/Core/: Application.cpp  Application.h  Ball.cpp  Ball.h  BulletContactCallback.cpp  BulletContactCallback.h  CollisionContext.cpp  CollisionContext.h  GameObject.cpp  GameObject.h  GameState.h  MultiPlatformHelper.h  NetManager.cpp  NetManager.h  OISManager.cpp  OISManager.h  OgreMotionState.cpp  OgreMotionState.h  OgreText.h  Paddle.cpp  Paddle.h  Room.cpp  Room.h  SceneHelper.h  ScoreManager.cpp  ScoreManager.h  Simulator.cpp  Simulator.h  SoundAdapter.cpp  SoundAdapter.h  SoundManager.cpp  SoundManager.h  SoundScoreManager.cpp  SoundScoreManager.h  TextOverlay.cpp  (+3 more)
Assignment-2/buildtools/: Makefile.am
Game/: FinalReport.txt  README.md
Game/Assets/: xbox1.material
OIS-Documentation/: OISConfig_8h.html  OISEffect_8h.html  OISEvents_8h.html  OISException_8h.html  OISForceFeedback_8h.html  OISInputManager_8h.html  OISInterface_8h.html  OISJoyStick_8h.html  OISKeyboard_8h.html  OISMouse_8h.html  OISObject_8h.html  OISPrereqs_8h.html  OIS_8h.html  annotated.html  classOIS_1_1Effect-members.html  classOIS_1_1Effect.html  classOIS_1_1Effect__coll__graph.dot  classOIS_1_1Effect__coll__graph.md5  classOIS_1_1EventArg-members.html  classOIS_1_1EventArg.html  classOIS_1_1EventArg__coll__graph.dot  classOIS_1_1EventArg__coll__graph.md5  classOIS_1_1EventArg__inherit__graph.dot  classOIS_1_1EventArg__inherit__graph.md5  classOIS_1_1Exception-members.html  classOIS_1_1Exception.html  classOIS_1_1ForceFeedback-members.html  classOIS_1_1ForceFeedback.html  classOIS_1_1ForceFeedback__coll__graph.dot  classOIS_1_1ForceFeedback__inherit__graph.md5  classOIS_1_1InputManager-members.html  classOIS_1_1InputManager.html  classOIS_1_1Interface-members.html  classOIS_1_1Interface.html  classOIS_1_1Interface__inherit__graph.dot  classOIS_1_1Interface__inherit__graph.md5  classOIS_1_1JoyStick-members.html  classOIS_1_1JoyStick.html  classOIS_1_1JoyStickEvent-members.html  classOIS_1_1JoyStickEvent.html  (+154 more)
soundAdapterTest/: Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h  Makefile.am  Makefile.am~  OgreText.h~  README.md  resources.cfg
soundAdapterTest/.deps/: OgreApp-Application.Po  OgreApp-BaseApplication.Po  OgreApp-SoundAdapter.Po
(+4 files in other folders)
